--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.3.0",
+    "@vercel/node": "^5.3.14",
     "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
