--- a/.env.production
+++ b/.env.production
@@ -2,7 +2,7 @@
 NODE_ENV=production
 
 # Database Configuration
-DB_HOST='postgresql://neondb_owner:npg_krY4v5dfBVbO@ep-holy-dream-a1rqc1pt-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require'
+DB_HOST=postgresql://neondb_owner:npg_krY4v5dfBVbO@ep-holy-dream-a1rqc1pt-pooler.ap-southeast-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
 DB_PORT=5432
 DB_NAME=neondb
 DB_USER=neondb_owner
