--- a/.dockerignore
+++ b/.dockerignore
@@ -1,19 +1,15 @@
 node_modules
 npm-debug.log
-Dockerfile*
-docker-compose*
-.dockerignore
 .git
 .gitignore
 README.md
 .env
-.nyc_output
-coverage
 .env.local
-.env.development.local
-.env.test.local
 .env.production.local
-.vscode
-.idea
-*.log
+.env.development.local
+.vercel
 dist
+coverage
+.nyc_output
+.DS_Store
+*.log
